ulang/test/resources/failing/RuntimeException/statement-order.u
// the blocks in a file are executed top to bottom so this fails because "1"
// is not yet defined
test 1 + 1 == 2;

define
  1 := 0 +1;
  2 := 1 +1;
  m + 0 := m;
  m + (n +1) := (m + n) +1;

data 0 +1;

notation
  +  [infix 7];
  +1 [postfix 8];
